Disable coverpage for now
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     window.$docsify = {
       loadSidebar: true,
       auto2top: true,
-      coverpage: true,
+      coverpage: false,
       name: "kubevirt",
       repo: 'kubevirt/user-guide',
     }
