point user-guide to official repo
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       auto2top: true,
       coverpage: false,
       name: "kubevirt",
-      repo: 'davidvossel/kubevirt-user-guide-v2',
+      repo: 'kubevirt/user-guide',
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
